<resources>
    <string name="app_name">Movie Database</string>
    <string name="title">Movie Title</string>
    <string name="synopsis">Synopsis</string>
    <string name="ratings">%1$s / 10.0</string>
    <string name="ratings2">(%1$s Users)</string>

    <string name="logo">MovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="search_hint">Search</string>

    <!--    <string name="title">Judul</string>-->
    <!--    <string name="description">Deskripsi</string>-->
    <string name="submit">Submit</string>
    <string name="favorite">Favorite</string>
    <string name="date">Date</string>

    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="favorite_button">favbutton</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="error">Error</string>
    <string name="nav_title_favorite">Favorites</string>
    <string name="nav_title_home">Home</string>
    <string name="name">movie title</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Coming Soon</string>
    <string name="title_favorite">Module Title</string>
</resources>